<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment">fragment</string>

    <string name="mainActivity_fragment_title_home">首页</string>
    <string name="mainActivity_fragment_title_investment">投资</string>
    <string name="mainActivity_fragment_title_my_assets">我的资产</string>
    <string name="mainActivity_fragment_title_more">更多</string>

    <string name="investmentFragment_fragment_title_all">全部理财</string>
    <string name="investmentFragment_fragment_title_recommend">推荐理财</string>
    <string name="investmentFragment_fragment_title_hot">热门资产</string>

    <string name="homeFragment_YearRate">预期年率:</string>
    <string name="homeFragment_YearRate_Percent_sign">%</string>

    <string name="down_time">倒计时：</string>
    <string name="time">S</string>
    <string name="welcomeActivity_latest_version_number_toast">最新版本号:</string>
    <string name="welcomeActivity_alert_title">下载最新版本</string>
    <string name="welcomeActivity_alert_message">解决一些bug，优化网络请求！</string>
    <string name="welcomeActivity_progress_message">正在下载中,请稍后...</string>
    <string name="welcomeActivity_alert_button_yes">确定</string>
    <string name="welcomeActivity_alert_button_no">取消</string>
    <string name="welcomeActivity_alert_success_toast">所有任务已完成</string>

    <string name="mianActivity_exit_the_program_toast">再点击一次,退出当前应用</string>
    <string name="login_success">登陆成功</string>
    <string name="horseRaceLampView_text">有道金融壕运当头，首投返现最高达188元</string>
    <string name="homeFragment_button_Protection_of_principal_and_interest">本息保障</string>
    <string name="homeFragment_button_Daily_interest">每日计息</string>
    <string name="homeFragment_button_High_revenue">高额收益</string>
    <string name="homeFragment_button_Join_now">立即加入</string>
    <string name="You_Dao">风险保障金由有道银行监管</string>

    <string name="item_tv_product_money">产品金额</string>
    <string name="Expected_annual_interest_rate">预期年利率</string>
    <string name="item_Lock_in_period">锁定期</string>

    <string name="ten_thousand">万</string>
    <string name="Percent_sign">%</string>
    <string name="day">天</string>
    <string name="vertical">|</string>

    <string name="my_assets_study">学习提示：</string>
    <string name="my_assets_Recharge_txt">充值我们将以集成支付宝sdk支付金额演示充值功能</string>
    <string name="my_assets_Withdrawal_txt">提现业务:在p2p金融平台中,提现都不是实时到账的,而是审核提现业务:系统将会告知24小时内进行转账，如果未收到,请联系客服..</string>
    <string name="my_assets_Recharge">充值</string>
    <string name="my_assets_Withdrawal">提现</string>

    <string name="my_invest_manage">投资管理</string>
    <string name="my_reward_manage">投资管理(直观)</string>
    <string name="my_asset_manage">资产管理</string>

    <string name="more_tel">010-56253825</string>
    <string name="icon_more_register">用户注册</string>
    <string name="icon_more_secret">手势密码</string>
    <string name="icon_more_reset">重置手势密码</string>
    <string name="icon_more_contact">联系客服</string>
    <string name="icon_more_sms">用户反馈</string>
    <string name="icon_more_share">分享给好友</string>
    <string name="icon_more_about">关于有道理财</string>

    <string name="text_delete">删除</string>
    <string name="text_register">注   册</string>
    <string name="text_login">登   录</string>
    <string name="et_tel">请输入手机号</string>
    <string name="et_user_name">请输入用户名</string>
    <string name="et_pwd">请输入密码</string>
    <string name="et_pwd_again">请再次输入密码</string>

    <string name="tel">手机号</string>
    <string name="user_name">用户名</string>
    <string name="pwd">密码</string>
    <string name="pwd_again">确认密码</string>
    <string name="user_info">用户信息</string>
    <string name="profile_pic">更改头像</string>
    <string name="exit_login">退出登录</string>
</resources>