<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.finance.user.register.UserRegisterActivity">

    <com.finance.framework.view.ToolBar
        android:layout_width="match_parent"
        android:layout_height="@dimen/ToolBar_height"
        app:titleText="@string/icon_more_register"></com.finance.framework.view.ToolBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_finance_del_bt">
        <TextView
            android:layout_width="@dimen/progress_view_height"
            android:layout_height="match_parent"
            android:text="@string/tel"
            android:textColor="@color/colorBlack"
            android:paddingLeft="@dimen/margin"
            android:textSize="@dimen/item_mid_size"
            android:gravity="center_vertical"></TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/tel"
            android:id="@+id/telEt"
            android:maxLines="1"
            android:layout_marginLeft="@dimen/margin"></EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@color/grey"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_finance_del_bt">
        <TextView
            android:layout_width="@dimen/progress_view_height"
            android:layout_height="match_parent"
            android:text="@string/user_name"
            android:textColor="@color/colorBlack"
            android:paddingLeft="@dimen/margin"
            android:textSize="@dimen/item_mid_size"
            android:gravity="center_vertical"></TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/et_user_name"
            android:maxLines="1"
            android:id="@+id/UserNameEt"
            android:layout_marginLeft="@dimen/margin"></EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@color/grey"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_finance_del_bt">
        <TextView
            android:layout_width="@dimen/progress_view_height"
            android:layout_height="match_parent"
            android:text="@string/pwd"
            android:textColor="@color/colorBlack"
            android:paddingLeft="@dimen/margin"
            android:textSize="@dimen/item_mid_size"
            android:gravity="center_vertical"></TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/et_pwd"
            android:maxLines="1"
            android:id="@+id/PwdEt"
            android:layout_marginLeft="@dimen/margin"></EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@color/grey"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_finance_del_bt">
        <TextView
            android:layout_width="@dimen/progress_view_height"
            android:layout_height="match_parent"
            android:text="@string/pwd_again"
            android:textColor="@color/colorBlack"
            android:paddingLeft="@dimen/margin"
            android:textSize="@dimen/item_mid_size"
            android:gravity="center_vertical"></TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/et_pwd_again"
            android:maxLines="1"
            android:id="@+id/PwdAgainEt"
            android:layout_marginLeft="@dimen/margin"></EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@color/grey"></View>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/register_bt"
        android:textColor="@color/white"
        android:text="@string/text_register"
        android:textSize="@dimen/text_mid_size"
        android:id="@+id/registerBt"></Button>

</LinearLayout>