<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:clickable="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/all_fiannce_name"
            android:layout_margin="@dimen/button_margin"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_mid_size"></TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/grey"
            android:layout_margin="@dimen/item_margin"></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin">
            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="4"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="@dimen/zero"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/item_tv_product_money"></TextView>
                    <TextView
                        android:layout_width="@dimen/zero"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Expected_annual_interest_rate"></TextView>
                    <TextView
                        android:layout_width="@dimen/zero"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/item_Lock_in_period"></TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="@dimen/zero"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/all_finance_money"
                            android:textColor="@color/colorRed"></TextView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ten_thousand"></TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/zero"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/all_finance_year_Rate"
                            android:textColor="@color/colorRed"></TextView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Percent_sign"></TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="@dimen/zero"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorRed"
                            android:id="@+id/all_finance_year_suodingDays"></TextView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/day"></TextView>
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="@dimen/zero"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/vertical"></TextView>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/manage_list_count"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/item_margin"
                            android:textColor="@color/colorRed"></ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/all_finance_minTouMoney"></TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/zero"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:text="@string/vertical"></TextView>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/manage_list_guarantee"
                            android:layout_gravity="center_vertical"
                            android:padding="@dimen/item_margin"></ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:text="@string/homeFragment_button_Protection_of_principal_and_interest"></TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="@dimen/zero"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:text="@string/vertical"></TextView>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/manage_list_member"
                            android:layout_gravity="center_vertical"
                            android:padding="@dimen/item_margin"></ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:id="@+id/all_finance_memberNum"></TextView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <com.finance.zg6.view.ProgressView
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:id="@+id/all_finance_progress_view"
                android:layout_weight="1"></com.finance.zg6.view.ProgressView>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_view_margin"
            android:layout_marginTop="@dimen/item_view_margin"
            android:layout_marginBottom="@dimen/item_view_margin"
            android:background="@color/colorBlue"></View>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="@dimen/all_finance_del_bt"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_delete"
            android:layout_width="@dimen/all_finance_del_bt"
            android:layout_height="@dimen/all_finance_del_bt"
            android:background="@color/colorRed"
            android:text="@string/text_delete"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_mid_size" />
    </RelativeLayout>
</LinearLayout>
